--- a/Vezbe/Termin1/Zadatak3/Dockerfile
+++ b/Vezbe/Termin1/Zadatak3/Dockerfile
@@ -14,7 +14,7 @@ RUN pip install --trusted-host pypi.python.org -r requirements.txt
 EXPOSE 80
 
 # Define environment variable
- ENV PERSON Misteriozni
+ ENV PERSON Covece
 
 # Run app.py when the container launches
 CMD ["python", "app.py"]
