--- a/Vezbe/Termin2/Zadatak1/docker-compose.yml
+++ b/Vezbe/Termin2/Zadatak1/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "8085:80"
     networks:
       - webnet
+    environment:
+      - PERSON=Covece
     container_name: webapp
 
   redis:
