--- a/Vezbe/Termin5/docker-hive/conf.dist/hue-overrides.ini
+++ b/Vezbe/Termin5/docker-hive/conf.dist/hue-overrides.ini
@@ -1204,7 +1204,7 @@
 
   # Host where Hive Metastore Server (HMS) is running.
   # If Kerberos security is enabled, the fully-qualified domain name (FQDN) is required.
-  ## hive_metastore_host=localhost
+  hive_metastore_host=hive-metastore
 
   # Configure the port the Hive Metastore Server runs on.
   ## hive_metastore_port=9083
