termin 7 malo izmenjen, treba jos

--- a/Vezbe/Termin7/docker-spark/docker-compose.yml
+++ b/Vezbe/Termin7/docker-spark/docker-compose.yml
@@ -1,35 +1,42 @@
 version: '2' 
+
 services:
+
   namenode:
-    image: bde2020/hadoop-namenode:1.1.0-hadoop2.8-java8
+    image: bde2020/hadoop-namenode:2.0.0-hadoop3.1.3-java8
+    container_name: namenode
     volumes:
-      - ./data/namenode:/hadoop/dfs/name
+      - hadoop_namenode:/hadoop/dfs/name
     environment:
       - CLUSTER_NAME=test
     env_file:
       - ./hadoop.env
     ports:
-      - 50070:50070
-  datanode:
-    image: bde2020/hadoop-datanode:1.1.0-hadoop2.8-java8
+      - 9870:9870
+      - 9000:9000
+
+  datanode1:
+    image: bde2020/hadoop-datanode:2.0.0-hadoop3.1.3-java8
+    container_name: datanode1
     depends_on: 
       - namenode
     volumes:
-      - ./data/datanode:/hadoop/dfs/data
+      - hadoop_datanode1:/hadoop/dfs/data
     env_file:
       - ./hadoop.env
-    ports:
-      - 50075:50075
+
   spark-master:
-    image: bde2020/spark-master:2.1.0-hadoop2.8-hive-java8
+    image: bde2020/spark-master:2.4.0-hadoop3.1
     container_name: spark-master
     ports:
       - 8080:8080
       - 7077:7077
     env_file:
       - ./hadoop.env
+
   spark-worker:
-    image: bde2020/spark-worker:2.1.0-hadoop2.8-hive-java8
+    image: bde2020/spark-worker:2.4.0-hadoop3.1
+    container_name: spark-worker
     depends_on:
       - spark-master
     environment:
@@ -38,16 +45,31 @@ services:
       - 8081:8081
     env_file:
       - ./hadoop.env
-  spark-notebook:
-    image: bde2020/spark-notebook:2.1.0-hadoop2.8-hive
-    container_name: spark-notebook
-    env_file:
-      - ./hadoop.env
-    ports:
-      - 9001:9001
-  hue:
-    image: bde2020/hdfs-filebrowser:3.11
-    ports:
-      - 8088:8088
+
+  livy:
+    image: cloudiator/livy-server-docker
+    container_name: livy
     environment:
-      - NAMENODE_HOST=namenode
+      - SPARK_MASTER_ENDPOINT=spark-master
+      - SPARK_MASTER_PORT=7077
+      - DEPLOY_MODE=client
+    depends_on: 
+      - spark-master
+    ports:
+      - 8998:8998
+  
+  hue:
+    image: gethue/hue:latest
+    hostname: hue
+    container_name: hue
+    dns: 8.8.8.8
+    ports:
+      - "8888:8888"
+    volumes:
+      - ./conf.dist:/usr/share/hue/desktop/conf
+    depends_on: 
+      - namenode
+
+volumes:
+  hadoop_namenode:
+  hadoop_datanode1:
