--- a/Vezbe/Termin7/docker-spark/docker-compose.yml
+++ b/Vezbe/Termin7/docker-spark/docker-compose.yml
@@ -25,6 +25,16 @@ services:
     env_file:
       - ./hadoop.env
 
+  datanode2:
+    image: bde2020/hadoop-datanode:2.0.0-hadoop3.1.3-java8
+    container_name: datanode2
+    depends_on: 
+      - namenode
+    volumes:
+      - hadoop_datanode2:/hadoop/dfs/data
+    env_file:
+      - ./hadoop.env
+
   spark-master:
     image: bde2020/spark-master:2.4.0-hadoop3.1
     container_name: spark-master
@@ -34,15 +44,27 @@ services:
     env_file:
       - ./hadoop.env
 
-  spark-worker:
+  spark-worker1:
     image: bde2020/spark-worker:2.4.0-hadoop3.1
-    container_name: spark-worker
+    container_name: spark-worker1
     depends_on:
       - spark-master
     environment:
       - SPARK_MASTER=spark://spark-master:7077
     ports:
       - 8081:8081
+    env_file:
+      - ./hadoop.env
+  
+  spark-worker2:
+    image: bde2020/spark-worker:2.4.0-hadoop3.1
+    container_name: spark-worker2
+    depends_on:
+      - spark-master
+    environment:
+      - SPARK_MASTER=spark://spark-master:7077
+    ports:
+      - 8082:8081
     env_file:
       - ./hadoop.env
   
@@ -58,6 +80,8 @@ services:
     depends_on: 
       - namenode
 
+
 volumes:
   hadoop_namenode:
   hadoop_datanode1:
+  hadoop_datanode2:
