sitne ispravke u spark primerima

--- a/Vezbe/Termin7/docker-spark/docker-compose.yml
+++ b/Vezbe/Termin7/docker-spark/docker-compose.yml
@@ -41,6 +41,8 @@ services:
     ports:
       - 8080:8080
       - 7077:7077
+    environment: 
+      - PYSPARK_PYTHON=python3
     env_file:
       - ./hadoop.env
 
