--- a/Vezbe/Termin3/docker-hadoop/conf.dist/hue.ini
+++ b/Vezbe/Termin3/docker-hadoop/conf.dist/hue.ini
@@ -1105,7 +1105,7 @@
       resourcemanager_host=resourcemanager
 
       # The port where the ResourceManager IPC listens on
-      ## resourcemanager_port=8032
+      resourcemanager_port=8088
 
       # Whether to submit jobs to this cluster
       submit_to=True
