--- a/Vezbe/Termin3/docker-hive/conf.dist/hue.ini
+++ b/Vezbe/Termin3/docker-hive/conf.dist/hue.ini
@@ -1076,7 +1076,7 @@
 
     [[[default]]]
       # Enter the filesystem uri
-      fs_defaultfs=hdfs://namenode:9870
+      fs_defaultfs=hdfs://namenode:9000
 
       # NameNode logical name.
       ## logical_name=
@@ -1084,7 +1084,7 @@
       # Use WebHdfs/HttpFs as the communication mechanism.
       # Domain should be the NameNode or HttpFs host.
       # Default port is 14000 for HttpFs.
-      webhdfs_url=http://localhost:9870/webhdfs/v1
+      webhdfs_url=http://namenode:9870/webhdfs/v1
 
       # Change this if your HDFS cluster is Kerberos-secured
       ## security_enabled=false
@@ -1102,10 +1102,10 @@
 
     [[[default]]]
       # Enter the host on which you are running the ResourceManager
-      ## resourcemanager_host=localhost
+      resourcemanager_host=resourcemanager
 
       # The port where the ResourceManager IPC listens on
-      ## resourcemanager_port=8032
+      resourcemanager_port=8088
 
       # Whether to submit jobs to this cluster
       submit_to=True
@@ -1117,10 +1117,10 @@
       ## security_enabled=false
 
       # URL of the ResourceManager API
-      ## resourcemanager_api_url=http://localhost:8088
+      resourcemanager_api_url=http://resourcemanager:8088
 
       # URL of the ProxyServer API
-      ## proxy_api_url=http://localhost:8088
+      proxy_api_url=http://resourcemanagerF:8088
 
       # URL of the HistoryServer API
       ## history_server_api_url=http://localhost:19888
@@ -1160,7 +1160,7 @@
 
   # Host where HiveServer2 is running.
   # If Kerberos security is enabled, use fully-qualified domain name (FQDN).
-  ## hive_server_host=localhost
+  hive_server_host=hive_server
 
   # Port where HiveServer2 Thrift server runs on.
   ## hive_server_port=10000
@@ -1243,7 +1243,7 @@
 
   # Thrift version to use when communicating with HiveServer2.
   # New column format is from version 7.
-  ## thrift_version=7
+  thrift_version=1
 
   # A comma-separated list of white-listed Hive configuration properties that users are authorized to set.
   ## config_whitelist=hive.map.aggr,hive.exec.compress.output,hive.exec.parallel,hive.execution.engine,mapreduce.job.queuename
